# sample-python-project

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  local.env  pyproject.toml  pytest.ini
.circleci/: config.yml
.github/: PULL_REQUEST_TEMPLATE.md
python_project_template/: config.py
